assets/css/master.styl
@import '_settings'

normalize-css()
base()

body
  color #000
  font-family museo
  font-size 16px
  line-height 1.2
  margin 0
  overflow-x hidden
  padding 0

p 
  font-weight 100
  font-size 11px

h1
  font-family klavika

h1 
  font-weight 800
  font-size 16em
  margin auto
  width 100%
  -moz-transform scale(1, -1)
  -webkit-transform scale(1, -1)
  -o-transform scale(1, -1)
  -ms-transform scale(1, -1)
  transform scale(1, -1)
  text-transform uppercase

h1 a 
  color #000
  text-decoration none

h2 
  font-size 2em
  font-weight 300
  a
    color #000
    font-weight 800
    text-decoration none

h3 
  border-top 1px solid #ddd
  border-bottom 1px solid #ddd
  font-size 2.4em
  padding 5px
  margin 5px
  text-transform uppercase

h3 a 
  color #000
  text-decoration none

h3 ahover 
  text-decoration underline

h4 
  font-size 2em
  font-weight 200
  margin 5px

header
  color #fff
  text-align center
  width 100%
  div
    background #000
    height 360px
  h1
    line-height 1
    -ms-transform rotate(90deg)
    -webkit-transform rotate(90deg)
    transform rotate(90deg)
    width 200px
    a
      color #fff
      font-size 360px
  h2 
    color #000
    margin 0
    padding 1em
    font-family "museo-sans",serif
    font-size 1.5em
    font-weight 500

section.contact
  background #FBFBFB
  border-top 1px solid #E8E8E8
  border-bottom 1px solid #E8E8E8
  font-size 0.8em
  text-align center
  line-height 1
  p
    padding 3em 0
  a.btn
    font-size 1.325em
    text-decoration none
    box-shadow 0px 1px 2px 0px #aaa
    display block
    margin 0 auto
    width 360px

header 
  section 
    background #f3f3f3
    padding 10px
    font-size 0.8em
    line-height 0.5
    margin auto
    max-width 782px

    a 
      color #000

p 
  font-size 1.2em
  font-weight 300
  line-height 1.6em

a 
  color #999

.examples
  text-align center
  img
    width 100%

.case-study
  margin 0 auto
  width 80%

  section a:hover 
    opacity 0.9

  section figure 
    float left
    margin-right 5%
    width 40%

  section figure img 
    width 100%

  .examples
    img
      width 100%
    p
      text-align center

.box 
  border 1px solid #ccc
  position relative
  height auto
  margin-bottom 1.8em
  padding 0.9em 0

  .title 
    background #000
    color #fff
    float left
    display table-row
    position absolute
    top 0
    bottom 0
    padding 0 1.8em
    height 100%
    width 8em
    text-align center

  h4 
    position relative
    top 50%
    -webkit-transform translateY(-50%)
    -ms-transform translateY(-50%)
    transform translateY(-50%)
    line-height 0
    margin 0
    padding 0

  p 
    padding 0.9em 1.8em
    padding-left 13.4em
    text-align left
    margin 0

a.btn 
  background #EEE
  color #333
  padding 30px
  font-weight 500
  &.green
    background #089E50
    color #FFF
    &:hover
      background #09AE58

footer 
  color #999
  margin-top 1.8em
  padding-bottom 4em
  padding-top 4em
  width 100%
  text-align center

@media(max-width: 568px)
  .box
    padding-top 0
    .title
      display block
      width 100%
      position relative
      float none
      height 50px
      width auto
    p
      padding 0.9em 1.8em

@import '_helpers'

